--- a/BookSaleProject/src/main/resources/templates/index.html
+++ b/BookSaleProject/src/main/resources/templates/index.html
@@ -95,33 +95,39 @@
                             </div>
                             <p class="h4" th:text="${book.key.price}+' đ'" style="color: greenyellow;"> đ</p>
                             <div class="row">
-                              <div class="col-sm-2" style="padding-top: 20px;">
+                              <div class="col-sm-3" style="padding-top: 20px;">
                                 <strong style="min-width: 137px;">Tác giả</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.author}" style="padding-left: 30px;"></span>
-                              </div>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.author}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
-                              <div class="col-sm-2" style="padding-top: 20px;">
+                            <div class="col-sm-3" style="padding-top: 20px;">
                                 <strong style="min-width: 137px;">Số lượng</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.SL}" style="padding-left: 30px;"></span>
-                              </div>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.SL}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
-                              <div class="col-sm-2" style="padding-top: 20px;">
-                                <strong style="min-width: 137px;">Nhà xuất bản</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.nxb}" style="padding-left: 30px;"></span>
-                              </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <strong style="min-width: 137px;">Nhà xuất
+                                    bản</strong>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.nxb}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
-                              <div class="col-sm-2" style="padding-top: 20px;">
-                                <strong style="min-width: 137px;">Năm xuất bản</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.date}" style="padding-left: 30px;"></span>
-                              </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <strong style="min-width: 137px;">Năm xuất
+                                    bản</strong>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.date}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
                               <div style="padding-top: 40px;">
                                 <strong style="min-width: 137px;">Nội dung:</strong>
@@ -231,33 +237,39 @@
                             </div>
                             <p class="h4" th:text="${book.key.price}+' đ'" style="color: greenyellow;"> đ</p>
                             <div class="row">
-                              <div class="col-sm-2" style="padding-top: 20px;">
+                              <div class="col-sm-3" style="padding-top: 20px;">
                                 <strong style="min-width: 137px;">Tác giả</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.author}" style="padding-left: 30px;"></span>
-                              </div>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.author}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
-                              <div class="col-sm-2" style="padding-top: 20px;">
+                            <div class="col-sm-3" style="padding-top: 20px;">
                                 <strong style="min-width: 137px;">Số lượng</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.SL}" style="padding-left: 30px;"></span>
-                              </div>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.SL}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
-                              <div class="col-sm-2" style="padding-top: 20px;">
-                                <strong style="min-width: 137px;">Nhà xuất bản</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.nxb}" style="padding-left: 30px;"></span>
-                              </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <strong style="min-width: 137px;">Nhà xuất
+                                    bản</strong>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.nxb}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
-                              <div class="col-sm-2" style="padding-top: 20px;">
-                                <strong style="min-width: 137px;">Năm xuất bản</strong>
-                              </div>
-                              <div class="col-sm-4" style="padding-top: 20px;">
-                                <span th:text="${book.key.date}" style="padding-left: 30px;"></span>
-                              </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <strong style="min-width: 137px;">Năm xuất
+                                    bản</strong>
+                            </div>
+                            <div class="col-sm-3" style="padding-top: 20px;">
+                                <span th:text="${book.key.date}"
+                                    style="padding-left: 30px;"></span>
+                            </div>
 
                               <div style="padding-top: 40px;">
                                 <strong style="min-width: 137px;">Nội dung:</strong>
