--- a/BookSaleProject/src/main/resources/templates/header.html
+++ b/BookSaleProject/src/main/resources/templates/header.html
@@ -128,9 +128,10 @@
                                         <a
                                             style="text-decoration: none; color: white; font-size: large;cursor: pointer;">
                                             <i class="fa-solid fa-user">
-                                                <span th:text="'  '+${user.username}"
-                                                    style="display: inline-flex;font-family:'Times New Roman', Times, serif;font-weight: lighter;">
-                                            </span>
+                                                <p th:text="'  '+${user.username}"
+                                                    style="display: inline-flex;font-family:Arial, Helvetica, sans-serif;
+                                                    font-weight: 80;overflow: hidden;text-overflow: ellipsis;max-width: 110px;font-size: medium;">
+                                            </p>
                                             </i>
                                         </a>
                                         <div class="dropdown-content">
