--- a/BookSaleProject/src/main/resources/templates/getBookListForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getBookListForCus.html
@@ -36,13 +36,13 @@
             <div class="col-sm-10">
                 <p th:text="${title}" class="h1" style="color: white;text-align: left;"></p>
                 <div style="display: inline-flex;">
-                    <div th:if="${user.email != null}">
+                    <div th:if="${session.userEmail != null}">
                         <a th:href="@{/user/}"
                             style=" font-family: 'Courier New', Courier, monospace; text-decoration: none; color: white;font-size: larger;display: inline;"
                             onmouseover="this.style.textDecoration='underline'"
                             onmouseout="this.style.color='white'; this.style.textDecoration='none'">Trang chủ</a>
                     </div>
-                    <div th:unless="${user.email != null}">
+                    <div th:unless="${session.userEmail != null}">
                         <a th:href="@{/}"
                             style=" font-family: 'Courier New', Courier, monospace; text-decoration: none; color: white;font-size: larger;display: inline;"
                             onmouseover="this.style.textDecoration='underline'"
