--- a/BookSaleProject/src/main/resources/templates/header.html
+++ b/BookSaleProject/src/main/resources/templates/header.html
@@ -65,23 +65,17 @@
                     <div class="col-sm-7 ">
                         <div class="row">
                             <div class="col-sm-6" style="text-align: left;">
-                                <div th:if="${user.email != null}">
-                                    <a th:href="@{/user/}"
+                                <a th:href="@{/}"
                                     style="text-decoration: none; color: white;font-family: 'Courier New', Courier, monospace; font-size: xx-large;letter-spacing: 4px;">
                                     <i class="fa-solid fa-book-open"></i>ONLINE BOOKSALE </a>
-                                </div>
-                                <div th:unless="${user.email != null}">
-                                    <a th:href="@{/}"
-                                    style="text-decoration: none; color: white;font-family: 'Courier New', Courier, monospace; font-size: xx-large;letter-spacing: 4px;">
-                                    <i class="fa-solid fa-book-open"></i>ONLINE BOOKSALE </a>
-                                </div>
                             </div>
                             <div class=" col-sm-6 " style="margin-top:10px ;">
                                 <div class="row" style="text-align: left;">
 
 
                                     <div class="col-sm-6 dropdown">
-                                        <a th:href="@{/getAllBook}" style="text-decoration: none; color: white; font-size: small; cursor: pointer;"
+                                        <a th:href="@{/getAllBook}"
+                                            style="text-decoration: none; color: white; font-size: small; cursor: pointer;"
                                             onmouseover=" this.style.textDecoration='underline'"
                                             onmouseout=" this.style.textDecoration='none'">
                                             <i class="fa-solid fa-list"></i>DANH MỤC SẢN PHẨM
@@ -117,21 +111,22 @@
                     <div class="col-sm-4" style="margin-top:10px;">
                         <div class="row">
                             <div class="col">
-                                <div th:if="${user.email==null}">
-                                    <a th:href="@{/user/}" style="text-decoration: none; color: white; font-size: small;"
+                                <div th:if="${session.userEmail==null}">
+                                    <a th:href="@{/user/}"
+                                        style="text-decoration: none; color: white; font-size: small;"
                                         onmouseover=" this.style.textDecoration='underline'"
                                         onmouseout=" this.style.textDecoration='none'"> <i
                                             class="fa-solid fa-user"></i>LOGIN/SIGNUP</a>
                                 </div>
-                                <div th:unless="${user.email==null}">
+                                <div th:unless="${session.userEmail==null}">
                                     <div class="dropdown">
                                         <a
                                             style="text-decoration: none; color: white; font-size: large;cursor: pointer;">
                                             <i class="fa-solid fa-user">
-                                                <p th:text="'  '+${user.username}"
+                                                <p th:text="'  '+${session.userEmail}"
                                                     style="display: inline-flex;font-family:Arial, Helvetica, sans-serif;
                                                     font-weight: 80;overflow: hidden;text-overflow: ellipsis;max-width: 110px;font-size: medium;">
-                                            </p>
+                                                </p>
                                             </i>
                                         </a>
                                         <div class="dropdown-content">
@@ -154,17 +149,18 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div th:if="${user.email != null}">
+                                <div th:if="${session.userEmail!= null}">
                                     <a href="#" style="text-decoration: none; color: white; font-size: small;"
-                                    onmouseover=" this.style.textDecoration='underline'"
-                                    onmouseout=" this.style.textDecoration='none'"><i
-                                        class="fa-solid fa-cart-shopping"></i>GIỎ HÀNG</a>
+                                        onmouseover=" this.style.textDecoration='underline'"
+                                        onmouseout=" this.style.textDecoration='none'"><i
+                                            class="fa-solid fa-cart-shopping"></i>GIỎ HÀNG</a>
                                 </div>
-                                <div th:unless="${user.email != null}">
-                                    <a th:href="@{/user/}" style="text-decoration: none; color: white; font-size: small;"
-                                    onmouseover=" this.style.textDecoration='underline'"
-                                    onmouseout=" this.style.textDecoration='none'"><i
-                                        class="fa-solid fa-cart-shopping"></i>GIỎ HÀNG</a>
+                                <div th:unless="${session.userEmail!= null}">
+                                    <a th:href="@{/user/}"
+                                        style="text-decoration: none; color: white; font-size: small;"
+                                        onmouseover=" this.style.textDecoration='underline'"
+                                        onmouseout=" this.style.textDecoration='none'"><i
+                                            class="fa-solid fa-cart-shopping"></i>GIỎ HÀNG</a>
                                 </div>
                             </div>
                             <div class="col">
@@ -185,8 +181,8 @@
 
                 </div>
             </div>
-
         </header>
+
     </div>
 </body>
 
