--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -35,13 +35,13 @@
 									<input id="password" type="password" class="form-control" name="password" th:field="*{password}">
 								</div>
 
-								<!-- <div class="form-group">
+								<div class="form-group">
 									<div class="custom-checkbox custom-control">
 										<input type="checkbox" name="rememberme" id="remember"
 											class="custom-control-input">
 										<label for="remember" class="custom-control-label">Remember Me</label>
 									</div>
-								</div> -->
+								</div>
 
 								<div class="form-group m-0">
 									<button type="submit" class="btn btn-primary btn-block">
