fix login, register

--- a/BookSaleProject/src/main/resources/templates/Register.html
+++ b/BookSaleProject/src/main/resources/templates/Register.html
@@ -15,79 +15,83 @@
 </head>
 
 <script th:inline="javascript">
-  var mess = /*[[${mess}]]*/ {};
-  if(mess != null || !mess.isEmpty) {
-    var message = mess.split(" ");
-    message.forEach(element => {
-      if (element.equals("email")) {
-        var email = document.getElementById("email").style.color="red";
-      }
-      if (element.equals("password")) {
-        var password = document.getElementById("password").style.color="red";
-      }
-      if (element.equals("sdt")) {
-        var sdt = document.getElementById("sdt").style.color="red";
-      }
-      if (element.equals("doublicate")) {
-        var email = document.getElementById("email").style.placeContent="Email đã tồn tại";
-      }
-      if (element.equals("errorpassword")) {
-        var password = document.getElementById("passAgain").style.placeContent="Mật khẩu không trùng khớp";
-      }
-    });
-  }
-
+  document.addEventListener("DOMContentLoaded", function () {
+    var mess = /*[[${messages}]]*/ {};
+    if (mess !== null && Object.keys(mess).length !== 0) {
+      var messages = mess.split(" ");
+      messages.forEach(message => {
+        if (message === "email") {
+          document.getElementById("email").style.color = "red";
+        }
+        if (message === "duplicate") {
+          document.getElementById("email").style.placeholder = "Email đã tồn tại";
+        }
+        if (message === "sdt") {
+          document.getElementById("sdt").style.color = "red";
+        }
+        if (message === "errorpassword") {
+          document.getElementById("passAgain").style.placeholder = "Mật khẩu không trùng khớp";
+        }
+        if (message === "password") {
+          document.getElementById("password").style.color = "red";
+        }
+      });
+    }
+  });
 </script>
 
-<body style="background-image: url('images/background2.jpg');">
-    <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-      <div class="container h-100">
-        <div class="row d-flex justify-content-center align-items-center h-100">
-          <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-            <div class="card" style="border-radius: 15px;">
-              <div class="card-body p-5">
-                <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-                <form th:action="@{/user/register}" th:method="post" th:object="${user}">
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="text" id="username" class="form-control form-control-lg" th:field="*{username}" />
-                    <label class="form-label" for="username">Nhập tên</label>
-                  </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="email" id="email" class="form-control form-control-lg" th:field="*{email}"/>
-                    <label class="form-label" for="email">Nhập Email</label>
-                  </div>
+<body>
+  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+    <div class="container h-100">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+          <div class="card" style="border-radius: 15px;">
+            <div class="card-body p-5">
+              <h2 class="text-uppercase text-center mb-5">Create an account</h2>
 
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="tel" id="sdt" class="form-control form-control-lg" th:field="*{sdt}"/>
-                    <label class="form-label" for="sdt">Nhập số điện thoại</label>
-                  </div>
+              <form th:action="@{/user/register}" th:method="post" th:object="${user}">
 
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="psw" class="form-control form-control-lg" th:field="*{password}"/>
-                    <label class="form-label" for="psw">Nhập mật khẩu</label>
-                  </div>
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="email" id="email" class="form-control form-control-lg" th:field="*{email}" />
+                  <label class="form-label" for="email">Nhập Email</label>
+                </div>
 
-                  <div data-mdb-input-init class="form-outline mb-4">
-                    <input type="password" id="pswg" class="form-control form-control-lg" name="passAgain"/>
-                    <label class="form-label" for="pswg">Nhập lại mật khẩu</label>
-                  </div>
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="text" id="username" class="form-control form-control-lg" th:field="*{username}" />
+                  <label class="form-label" for="username">Nhập tên</label>
+                </div>
 
-                  <div class="d-flex justify-content-center">
-                    <button type="submit" data-mdb-button-init data-mdb-ripple-init
-                      class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
-                  </div>
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="tel" id="sdt" class="form-control form-control-lg" th:field="*{sdt}" />
+                  <label class="form-label" for="sdt">Nhập số điện thoại</label>
+                </div>
 
-                  <p class="text-center text-muted mt-5 mb-0">Đã có tài khoản? <a th:href="@{/user/}"
-                      class="fw-bold text-body"><u>Đăng nhập</u></a></p>
-                </form>
-              </div>
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="password" id="password" class="form-control form-control-lg" th:field="*{password}" />
+                  <label class="form-label" for="password">Nhập mật khẩu</label>
+                </div>
+
+                <div data-mdb-input-init class="form-outline mb-4">
+                  <input type="password" id="passAgain" class="form-control form-control-lg" name="passAgain" />
+                  <label class="form-label" for="passAgain">Nhập lại mật khẩu</label>
+                </div>
+
+                <div class="d-flex justify-content-center">
+                  <button type="submit" data-mdb-button-init data-mdb-ripple-init
+                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body">Register</button>
+                </div>
+
+                <p class="text-center text-muted mt-5 mb-0">Đã có tài khoản? <a th:href="@{/user/}"
+                    class="fw-bold text-body"><u>Đăng nhập</u></a></p>
+              </form>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
 </body>
 
 </html>
