--- a/BookSaleProject/src/main/resources/templates/login.html
+++ b/BookSaleProject/src/main/resources/templates/login.html
@@ -23,7 +23,7 @@
 							<form th:method="post" class="my-login-validation" th:action="@{/user/login}" th:object="${user}">
 								<div class="form-group">
 									<label for="email">Email</label>
-									<input id="email" type="text" class="form-control" th:field="*{email}" name="email">
+									<input id="email" type="email" class="form-control" th:field="*{email}" name="email">
 								</div>
 
 								<div class="form-group">
