--- a/BookSaleProject/src/main/resources/templates/bookDetail.html
+++ b/BookSaleProject/src/main/resources/templates/bookDetail.html
@@ -23,6 +23,8 @@
     <link rel="stylesheet" type="text/css" th:href="@{/css/spinButton.css}">
     <script th:src="@{/js/spinButton.js}"></script>
     <title>Mua bán sách</title>
+
+
 </head>
 
 
@@ -137,7 +139,7 @@
                                     </div>
                                 </button>
 
-                                <div class="modal" th:id="|bookModal${status.index}|">
+                                <div class="modal fade" th:id="|bookModal${status.index}|">
                                     <div class="modal-dialog modal-xl modal-dialog modal-dialog-centered">
                                         <div class="modal-content">
                                             <div class="row">
