--- a/BookSaleProject/src/main/resources/templates/getBookListForCus.html
+++ b/BookSaleProject/src/main/resources/templates/getBookListForCus.html
@@ -9,7 +9,6 @@
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Marck+Script&display=swap" rel="stylesheet">
@@ -22,8 +21,11 @@
     <script th:src="@{/js/reUse.js}"></script>
     <link rel="stylesheet" type="text/css" th:href="@{/css/spinButton.css}">
     <script th:src="@{/js/spinButton.js}"></script>
+    <link rel="stylesheet" type="text/css" th:href="@{/css/Directory.css}">
     <title>Mua bán sách</title>
+
 </head>
+
 
 <body>
     <header th:insert="~{header :: header}"></header>
@@ -60,55 +62,42 @@
     <div class="row" style="padding-top: 20px;">
         <div class="col-sm-1"></div>
         <div class="col-sm-2">
-            <div style="width: fit-content;">
-                <div onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
-                    <i class="fa-solid fa-list" style="font-size: 20px;"></i>
-                    <a th:href="@{/getAllBook}" style="display: inline;font-size: 20px; padding-bottom: 10px; "
-                    >Danh Mục Sản Phẩm</a>
-                </div>
-                <div>
-                    <div class="dropdown" style="padding-top: 10px; width: fit-content;"
-                        onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
-                        <a type="button" style=" background-color: white; color: black;border: white;"
-                            class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
-                            onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
-                            <strong style="color: black;" class="h5" onmouseover="this.style.color='#01a14b';"
-                                onmouseout="this.style.color='black';">Nhà xuất bản</strong>
-                        </a>
-                        <ul class="dropdown-content">
-                            <li th:each="nxb: ${NxbList}">
-                                <a style="display: block" class="dropdown-item"
-                                    th:href="@{/book/getBookByNxb/__${nxb}__}" th:text="${nxb}"></a>
-                            </li>
-                        </ul>
-                    </div>
-                    <div th:each="type : ${bookTypeList}">
-                        <a th:href="@{/book/getBookByType/__${type.id}__}"
-                            style="text-decoration: none; color: black; cursor: pointer;"
-                            onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
-                            <p th:text="'  '+${type.name}" style="padding-top: 20px;font-weight: lighter;" class="h5">
-                            </p>
-                        </a>
-                        <hr>
-                    </div>
-                    <div class="dropdown" style="width: fit-content; padding-top: 7px;"
-                        onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
-                        <a onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';"
-                            style="width: fit-content; background-color: white; color: black;border: white; padding-top: 10px;"
-                            class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown">
-                            <strong style="color: black;" class="h5" onmouseover="this.style.color='#01a14b';"
-                                onmouseout="this.style.color='black';">Nổi bật</strong>
-                        </a>
-                        <ul class="dropdown-content">
-                            <li><a class="dropdown-item" href="#">Sách bán chạy</a></li>
-                            <li><a class="dropdown-item" th:href="@{/book/getNewestBook}">Sách mới</a></li>
-                            <li><a class="dropdown-item" th:href="@{/book/getFavouriteBook}">Sách được yêu thích</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Giải thuật duyệt và render Danh sách sản phẩm theo dòng, cột của Bootstrap -->
+            <div style="width: fit-content;" class="accordion">
+                <button>
+                    <i class="fa-solid fa-list" style="font-size: 20px;">
+                        <p
+                            style="display: inline;font-size: 20px;font-family: Arial, Helvetica, sans-serif;font-weight: lighter;">
+                            Danh Mục Sản Phẩm</p>
+                    </i>
+                </button>
             </div>
+            <div class="panel open">
+                <div class="dropdown" style="padding-top: 10px; width: fit-content;"
+                    onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
+                    <a type="button" style=" background-color: white; color: black;border: white;"
+                        class="btn btn-primary dropdown-toggle" data-bs-toggle="dropdown"
+                        onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
+                        <strong style="color: black;" class="h5" onmouseover="this.style.color='#01a14b';"
+                            onmouseout="this.style.color='black';" >Nhà xuất bản</strong>
+                    </a>
+                    <ul class="dropdown-content" style="max-height: 500px;overflow-y: auto;">
+                        <li th:each="nxb: ${NxbList}">
+                            <a style="display: block" class="dropdown-item" th:href="@{/book/getBookByNxb/__${nxb}__}"
+                                th:text="${nxb}" data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-right"></a>
+                        </li>
+                    </ul>
+                </div>
+                <div th:each="type : ${bookTypeList}">
+                    <a th:href="@{/book/getBookByType/__${type.id}__}"
+                        style="text-decoration: none; color: black; cursor: pointer;"
+                        onmouseover="this.style.color='#01a14b';" onmouseout="this.style.color='black';">
+                        <p th:text="'  '+${type.name}" style="padding-top: 20px;font-weight: lighter;" class="h5">
+                        </p>
+                    </a>
+                    <hr>
+                </div>
+            </div>
+            <!-- Giải thuật duyệt và render Danh sách sản phẩm theo dòng, cột của Bootstrap -->
         </div>
         <div class="col-md-9">
             <p class="h3" th:text="${title}" style="padding: 0 0 20px 0;"></p>
@@ -116,7 +105,7 @@
                 <div th:each="book, status : ${BookRate}" class="col-sm-4" style="padding-top: 20px; ">
                     <form th:action="@{/book/getBookById}" th:method="get">
                         <input type="hidden" th:value="${book.key.id}" name="id">
-                        <div class="card" style="width:300px;">
+                        <div class="card" style="width:300px;" data-mdb-toggle="animation" data-mdb-animation-reset="true" data-mdb-animation="slide-right">
 
                             <button type="button" data-bs-toggle="modal"
                                 th:data-bs-target="|#bookModal${status.index}|">
@@ -126,8 +115,8 @@
                                 </div>
                             </button>
 
-                            <div class="modal" th:id="|bookModal${status.index}|">
-                                <div class="modal-dialog modal-xl modal-dialog modal-dialog-centered">
+                            <div class="modal fade" th:id="|bookModal${status.index}|" >
+                                <div class="modal-dialog modal-dialog-centered modal-xl modal-dialog-scrollable" role="document">
                                     <div class="modal-content">
                                         <div class="row">
                                             <div class="col-sm-4">
@@ -273,8 +262,9 @@
         </ul>
     </div>
 
-
     <footer th:insert="~{footer :: footer}"></footer>
+
+    <script th:src="@{/js/Directory.js}"></script>
 </body>
 
 </html>
